<resources>
    <string name="app_name">Flavor Chaser</string>
    <string name="liquid_calculator_tag">Liquid Calculator</string>
    <string name="recipes_tag">Recipes</string>
    <string name="flavors_tag">Flavors</string>
    <string name="social_tag">Social</string>
    <string name="chat_tag">Chat</string>
    <string name="friends_tag">Friends</string>
    <string name="groups_tag">Groups</string>
    <string name="eliquid_tag">E-liquid</string>
    <string name="open_navigation_drawer">Open Navigation Drawer</string>
    <string name="close_navigation_drawer">Close Navigation Drawer</string>
    <string name="recipe_results_tag"><u>RESULTS</u></string>
    <string name="base_tag">Base</string>
    <string name="profile_tag">Profile</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_address">Email Address</string>
    <string name="remember_me">Remember me</string>
    <string name="login">LOGIN</string>
    <string name="create_account">Create account</string>
    <string name="reset_password">Reset password</string>
    <string name="pirate_skull">Pirate Skull</string>
    <string name="server_error">Looks like we\'re having problems with our server, please try again later</string>
    <string name="user_credentials_not_found">No user with these credentials was found</string>
</resources>